Restructure for Java 1.8